# tvx

./: .envtemplate  .gitignore  .pre-commit-config.yaml  docker-compose.yaml  pyproject.toml  readme.md
backend/: Dockerfile  manage.py  pyproject.toml  pytest.ini
backend/authorization/: serializers.py  urls.py  views.py
backend/authorization/migrations/: 0001_initial.py
backend/core/: admin.py  filters.py  models.py  permissions.py  serializers.py  urls.py  views.py
backend/core/migrations/: 0001_initial.py  0002_alter_budget_allowed_to_alter_budget_user_and_more.py  0003_alter_transaction_budget_alter_transaction_category.py  0004_budget_name.py  0005_alter_transaction_budget.py
backend/tests/: conftest.py  factories.py  settings.py
backend/tests/api/: test_budget_endpoints.py  test_model_methods.py  test_transaction_endpoints.py
backend/tv/: asgi.py  settings.py  urls.py  wsgi.py
frontend/: package-lock.json  package.json
frontend/src/: index.js
frontend/src/api/: logout.js
frontend/src/components/AddForm/: AddForm.css  AddForm.js
frontend/src/components/BudgetList/: BudgetList.css  BudgetList.js
frontend/src/components/Forms/Budget/AddForm/: AddForm.js
frontend/src/components/Forms/Budget/ShareForm/: ShareForm.js
frontend/src/components/header/: Header.js
frontend/src/components/loginPanel/: loginPanel.css  loginPanel.js
frontend/src/views/BudgetDetail/: BudgetDetail.css  BudgetDetail.js
frontend/src/views/home/: Home.js
frontend/src/views/root/: Root.css  Root.js
