[tool.poetry]
name = "tv"
version = "0.1.0"
description = ""
authors = ["Marcin Jarosiński <marcin.jarosinski@stxnext.pl>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.1.5"
python-dotenv = "^0.21.0"
django-cors-headers = "^3.13.0"
djangorestframework = "^3.14.0"
psycopg2-binary = "^2.9.5"
djangorestframework-simplejwt = "^5.2.2"
django-filter = "^22.1"
pytest = "^7.2.0"
factory-boy = "^3.2.1"
pytest-factoryboy = "^2.5.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
